# cedar-for-agents

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md
.github/actions/create_coverage_comment/: action.yml
.github/actions/create_coverage_reports/: action.yml
.github/scripts/: prepare_wasm_npm_package.mjs  process_coverage.py
.github/workflows/: build_and_test.yml  build_and_test_js.yml  build_and_test_python.yml  build_and_test_rust.yml  ci.yaml  comment_pr.yml  nightly_build.yml  publish.yml  publish_python.yml  publish_wasm_npm.yml  wasm_integration_tests.yml
cedar-policy-mcp-schema-generator/: Cargo.toml  README.md
cedar-policy-mcp-schema-generator/src/: description.rs  err.rs  lib.rs  main.rs  schema_generator.rs
cedar-policy-mcp-schema-generator/src/description/: description.rs  deserializer.rs  err.rs  parser.rs
cedar-policy-mcp-schema-generator/src/description/parser/: err.rs  json_parser.rs  json_value.rs  loc.rs  tokenizer.rs
js/cedar-agent-policy-builder/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
js/cedar-agent-policy-builder/src/: builder.ts  entities.ts  index.ts  policy-generators.ts  schema.ts  types.ts
js/cedar-agent-policy-builder/tests/: adversarial.test.ts  builder.test.ts  entities.test.ts  from-config.test.ts  integration.test.ts  policy-generators.test.ts
js/cedar-analysis-mcp-server/mcp/: package-lock.json  package.json
js/protect-mcp-cedar-integration/: README.md  example.mjs  package.json  test.mjs
rust/: Cargo.toml
rust/cedar-policy-agent-builder/: Cargo.toml
rust/cedar-policy-agent-builder/src/: builder.rs  config.rs  entities.rs  lib.rs  policy.rs
rust/cedar-policy-mcp-schema-generator/: CHANGELOG.md  Cargo.toml  README.md
rust/cedar-policy-mcp-schema-generator-python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
rust/cedar-policy-mcp-schema-generator-python/cedar_mcp_schema_generator/: __init__.py
rust/cedar-policy-mcp-schema-generator-python/src/: lib.rs
rust/cedar-policy-mcp-schema-generator-python/tests/: test_request_generator.py  test_schema_generator.py
rust/cedar-policy-mcp-schema-generator-wasm/: CHANGELOG.md  Cargo.toml  README.md
rust/cedar-policy-mcp-schema-generator-wasm/src/: lib.rs
rust/cedar-policy-mcp-schema-generator-wasm/tests/: wasm_integration.rs
rust/cedar-policy-mcp-schema-generator-wasm/tests/node/: package.json  test.mjs
rust/cedar-policy-mcp-schema-generator/examples/: stub.cedarschema
rust/cedar-policy-mcp-schema-generator/examples/dedup/: dedup_collision_existing_entity.cedarschema  dedup_collision_existing_entity.json  dedup_enum_record_name_conflict.cedarschema  dedup_enum_record_name_conflict.json  dedup_enum_record_name_conflict_objects_as_records.cedarschema  dedup_leaf_record.cedarschema  dedup_leaf_record_different_required.cedarschema  dedup_leaf_record_different_required.json  dedup_leaf_record_different_required_objects_as_records.cedarschema  dedup_leaf_record_in_output.cedarschema  dedup_leaf_record_in_output.json  dedup_leaf_record_no_match.cedarschema  dedup_leaf_record_no_match.json  dedup_leaf_record_objects_as_records.cedarschema  dedup_leaf_record_objects_as_records.json  dedup_leaf_record_objects_as_records_flat.cedarschema  dedup_mixed_enum_and_record.cedarschema  dedup_mixed_enum_and_record.json  dedup_nested_record_not_deduplicated.cedarschema  dedup_nested_record_not_deduplicated.json  dedup_same_name_different_variants.cedarschema  dedup_same_name_different_variants.json  dedup_same_name_different_variants_flat.cedarschema  dedup_three_way_lca.cedarschema  dedup_three_way_lca.json  dedup_three_way_lca_flat.cedarschema  dedup_tools.cedarschema  dedup_tools.json  dedup_tools_flat.cedarschema
rust/cedar-policy-mcp-schema-generator/examples/simple/: tool.json  tool_default.cedarschema  tool_default.cedarschema.json  tool_encode_numbers_as_decimal.cedarschema  tool_encode_numbers_as_decimal.cedarschema.json  tool_encode_numbers_as_decimal.json  tool_flattened_namespace.cedarschema  tool_flattened_namespace.cedarschema.json  tool_flattened_namespace.json  tool_include_outputs.cedarschema  tool_include_outputs.cedarschema.json  tool_include_outputs.json  tool_keep_annotations.cedarschema  tool_keep_annotations.cedarschema.json  tool_mixed_array.cedarschema  tool_mixed_array.json  tool_nested_objects_flat.cedarschema  tool_nested_objects_flat.json  tool_nullable_objects.cedarschema  tool_nullable_objects.json  tool_objects_as_records.cedarschema  tool_objects_as_records.cedarschema.json  tool_objects_as_records.json  tool_tuple.cedarschema  tool_tuple.json
rust/cedar-policy-mcp-schema-generator/examples/strands/: strands_tools.cedarschema  strands_tools.json  strands_tools_flat.cedarschema
rust/cedar-policy-mcp-schema-generator/src/: cli.rs  description.rs  generator.rs  lib.rs  main.rs  mcp.rs  schema_generator.rs
rust/cedar-policy-mcp-schema-generator/src/cli/: args.rs  err.rs  exec.rs
rust/cedar-policy-mcp-schema-generator/src/description/: description.rs  deserializer.rs
rust/cedar-policy-mcp-schema-generator/src/description/parser/: json_parser.rs  json_value.rs
rust/cedar-policy-mcp-schema-generator/src/generator/: err.rs  identifiers.rs  request.rs  schema.rs
rust/cedar-policy-mcp-schema-generator/src/mcp/parser/: json_parser.rs
rust/cedar-policy-mcp-schema-generator/tests/: integration.rs
rust/mcp-tools-sdk/: CHANGELOG.md  Cargo.toml  README.md
rust/mcp-tools-sdk/src/: data.rs  description.rs  deserializer.rs  err.rs  lib.rs  parser.rs  validation.rs
rust/mcp-tools-sdk/src/parser/: err.rs  json_parser.rs  json_value.rs  tokenizer.rs
rust/mcp-tools-sdk/verus-proofs/: .gitignore  Cargo.toml  RFC8259_PROOF_COVERAGE.md
rust/mcp-tools-sdk/verus-proofs/src/: byte_specs.rs  common_specs.rs  decimal.rs  dedup.rs  escape.rs  fuel_mono.rs  json_spec.rs  lib.rs  parser.rs  tokenizer.rs  utf8_validation.rs
(+2 files in other folders)
