[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cedar-mcp-schema-generator"
version = "0.6.0"
description = "Python bindings for the Cedar MCP Schema Generator"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["cedar", "authorization", "mcp", "schema", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cedar_mcp_schema_generator._native"
