[package]
name = "cedar-policy-mcp-schema-generator"
description = "Auto-Generates Cedar schemas from an MCP server's tool descriptions."
version = "0.4.0"

#inherit rest from workspace
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
mcp-tools-sdk = { path = "../mcp-tools-sdk", version="*" }
cedar-policy-core = "=4.8.1"
miette = "7.6.0"
linked-hash-map = "0.5.6"
thiserror = "2.0"
smol_str = "0.3"
nonempty = "0.12"

# CLI only dependencies
clap = { version = "4.5.36", features = ["derive"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
cool_asserts = "2.0"
assert_cmd = "2.1.1"
tempfile = "3.23.0"

[lints]
workspace = true

[features]
cli = ["clap", "serde", "serde_json", "miette/fancy"]

[[bin]]
name = "cedar-policy-mcp-schema-generator"
path = "src/main.rs"
required-features = ["cli"]
